[project]
name = "griptape-runwayml-nodes"
version = "0.1.0"
description = "Griptape Nodes for RunwayML"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[tool.hatch.build.targets.wheel]
packages = ["runwayml"]

[tool.hatch.build.targets.sdist]
include = ["runwayml", "README.md", "LICENSE"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"